--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   material_design_icons_flutter: ^2.3.50
+  cached_network_image: "^0.4.1"
+  carousel_pro: ^0.0.13
 
 dev_dependencies:
   flutter_test:
