--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,13 @@ dependencies:
   material_design_icons_flutter: ^2.3.50
   cached_network_image: "^0.4.1"
   carousel_pro: ^0.0.13
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.15.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -34,6 +36,7 @@ flutter:
      - images/wallpaper2.jpg
      - images/twitter_logo.png
      - images/ic_launcher.png
+     - images/yo.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
